--- a/app/sass/navbar.scss
+++ b/app/sass/navbar.scss
@@ -112,9 +112,6 @@ and (max-device-width: 768px){
     display: block;
     background-color: #333;
     width: 100%;
-    a{
-      width: 100%;
-    }
   }
   ul.topnav.responsive {
     position: relative;
